--- a/node/chat/public/css/chat.css
+++ b/node/chat/public/css/chat.css
@@ -1,6 +1,20 @@
+.content-con {
+    width: 1200px;
+    margin: 50px auto;
+    background: #0769AD;
+    border-radius: 10px;
+}
 .content {
     width: 1200px;
-    margin: 0 auto;
+    margin: 0px auto;
+    background-color: rgba(255, 255, 255, 0.18);
+    border-radius: 10px 10px 10px 10px;
+    border-right: 1px solid rgba(2, 2, 2, 0.28);
+    border-left: 1px solid rgba(2, 2, 2, 0.28);
+    border-top: 1px solid rgba(250, 250, 250, 0.27);
+    box-shadow: rgba(255,255,255,0.3) 0 1px 0, rgba(0,0,0,0.3) 0 -1px 0;
+    box-shadow: 0 0 5px rgba(1, 1, 1, 0.7);
+
 }
 body {
     background-image: url(/static/images/bg.png);
@@ -21,12 +35,14 @@ body {
 }
 
 .side {
-    border: 1px solid #fff;
     height: 500px;
+    background: rgba(0,0,0,.3);
+    border-radius: 5px;
 }
 .main-content {
-    border: 1px solid #fff;
     height: 500px;
+    background: rgba(0,0,0,.3);
+    border-radius: 5px;
 }
 
 .top-title {
@@ -37,4 +53,95 @@ body {
 .top-note {
     font-size: 16px;
     margin-top: 10px;
+}
+
+.sideNav {
+
+
+}
+
+.sideNav li {
+    list-style: none;
+    height: 45px;
+    line-height: 45px;
+    margin-top: 5px;
+
+}
+
+.sideNav li a:hover {
+    cursor: pointer;
+    color: #fff;
+    background: #2ea7e0;
+}
+.sideNav li a{
+    color:#545454;
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+    font-size: 18px;
+    font-weight: bold;
+     background: #7fd4f3;
+     border-radius: 5px;
+}
+
+.sideIcon {
+    width: 25px;
+    height: 25px;
+}
+.talk-con {
+    padding-bottom: 50px;
+}
+
+.tab-main-top {
+    height: 440px;
+    border-bottom: 1px solid #ccc;
+    max-height: 440px;
+    overflow-y: auto;
+}
+
+.tab-main-bot {
+    height: 50px;
+}
+.input-append{
+    padding-top: 15px;
+    padding-left: 130px;
+    padding-bottom: 15px;
+}
+.talk-container li{
+    position: relative;
+    padding-top: 20px;
+    list-style: none;
+}
+.talk-item {
+    display: block;
+}
+
+.talk-item .arrow {
+    font-size: 20px;
+    font-weight: bole;
+}
+.talk-item-pop {
+    border-radius: 8px;
+    padding: 10px;
+    width: 500px;
+    font-size:18px;
+    margin-top:8px;
+    background: #97c94c;
+    background: -webkit-gradient(linear,left top,left bottom,from(#cf9),to(#9c3));
+    background: -webkit-linear-gradient(#cf9,#9c3);
+    background: -moz-linear-gradient(#cf9,#9c3);
+    background: -ms-linear-gradient(#cf9,#9c3);
+    background: -o-linear-gradient(#cf9,#9c3);
+    background: linear-gradient(#cf9,#9c3);
+    color:#000;
+}
+.talk-item-li-right {
+    text-align: right;
+}
+.talk-item-right {
+    text-align: right;
+}
+.talk-item-pop-right {
+    float: right;
+    background:#fff;
 }
