--- a/node/chat/views/layout.jade
+++ b/node/chat/views/layout.jade
@@ -17,6 +17,6 @@ html
     block footer
     script(src='/static/js/jquery-1.11.2.min.js')
     script(src='/static/js/bootstrap.js')
-    script(src='/static/css/angular.min.js')
+    script(src='/static/js/angular.min.js')
 
 
