--- a/node/chat/views/index.jade
+++ b/node/chat/views/index.jade
@@ -20,16 +20,16 @@ block main-container
       div.container-fluid.talk-con
         div.row-fluid
           div.span2.side
-              div.ul.sideNav
-                li
+              div.sideNav
+                div.li-item
                   a(href="#")
                     img.sideIcon(width="25", height="25",src="/static/images/r1.jpg")
                     span 123456
-                li
+                div.li-item
                   a(href="#")
                     img.sideIcon(width="25", height="25",src="/static/images/r1.jpg")
                     span 123456
-                li
+                div.li-item
                   a(href="#")
                     img.sideIcon(width="25", height="25",src="/static/images/r1.jpg")
                     span 123456
