--- a/node/chat/app/public/views/index.jade
+++ b/node/chat/app/public/views/index.jade
@@ -13,10 +13,12 @@ html.no-js
     meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
     title
     meta(name='description', content='')
-    meta(name='viewport', content='width=device-width')
+    meta(name='viewport', content='width=device-width, initial-scale=1')
     // Place favicon.ico and apple-touch-icon.png in the root directory
-    link(rel='stylesheet', href='/static/styles/core/normalize.css')
+    link(rel='stylesheet', href='/static/styles/core/bootstrap-theme.min.css')
+    link(rel='stylesheet', href='/static/styles/core/bootstrap.min.css')
     link(rel='stylesheet', href='/static/styles/core/main.css')
+    link(rel='stylesheet', href='/static/styles/index.css')
     script(src='/static/scripts/core/modernizr-2.6.2.min.js')
   body
     //if lt IE 7
@@ -29,11 +31,77 @@ html.no-js
         a(href='http://www.google.com/chromeframe/?redirect=true') activate Google Chrome Frame
         |  to improve your experience.
     // Add your site or application content here
-    p Hello world! This is HTML5 Boilerplate.
-
+    nav.navbar.navbar-default
+      .container
+        .navbar-header
+          button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='.navbar-collapse')
+            span.sr-only Toggle navigation
+            span.icon-bar
+            span.icon-bar
+            span.icon-bar
+          a.navbar-brand.header-icon(href='#') Toshiba聊天室
+        .navbar-collapse.collapse
+          ul.nav.navbar-nav
+            li.active
+              a(href='#') Home
+            li
+              a(href='#about') About
+            li
+              a(href='#contact') Contact
+            li.dropdown
+              a.dropdown-toggle(href='#', data-toggle='dropdown', role='button', aria-expanded='false')
+                | Dropdown
+                span.caret
+              ul.dropdown-menu(role='menu')
+                li
+                  a(href='#') Action
+                li
+                  a(href='#') Another action
+                li
+                  a(href='#') Something else here
+                li.divider
+                li.dropdown-header Nav header
+                li
+                  a(href='#') Separated link
+                li
+                  a(href='#') One more separated link
+        // /.nav-collapse
+    .container.main-container
+      .row.row-offcanvas.row-offcanvas-right
+        .col-xs-12.col-sm-9.chat-con
+          p.pull-right.visible-xs
+            button.btn.btn-primary.btn-xs(type='button', data-toggle='offcanvas') Toggle nav
+          .jumbotron.chat-detail
+            .chat-item
+              h4.chat-user 【崔世菊】2015/6/8 17:08
+              p.chat-info
+                | This is an example to show the potential of an offcanvas layout pattern in Bootstrap. Try some responsive-range viewport sizes to see it in action.
+            .chat-item
+              h4.chat-user.chat-self 【孙东芝】2015/6/8 17:08
+              p.chat-info
+                | This is an example to show the potential of an offcanvas layout pattern in Bootstrap. Try some responsive-range viewport sizes to see it in action.
+          form.form-horizontal
+            .form-group.form-group-lg
+              .col-sm-10
+                input#formGroupInputLarge.form-control(type='text', placeholder='消息')
+              button.btn.btn-info.btn-lg.btn-padding-45(type='submit') 发送
+        // /.col-xs-12.col-sm-9
+        #sidebar.col-xs-6.col-sm-3.sidebar-offcanvas
+          .list-group
+            a.list-group-item.active(href='#') 主页
+            a.list-group-item(href='#') function1
+            a.list-group-item(href='#') function2
+            a.list-group-item(href='#') function3
+            a.list-group-item(href='#') function4
+        // /.sidebar-offcanvas
+      // /row
+      hr
+      footer
+        p © Toshiba 2015
     script(src='/static/vender/jquery/jquery-2.1.4.min.js')
-    script(src='/static/scripts/core/plugins.js')
-    script(src='/static/scripts/core/main.js')
+    script(src='/static/scripts/core/bootstrap.min.js')
+    script(src='/socket.io/socket.io.js')
+    script(src='/static/scripts/index.js')
     // Google Analytics: change UA-XXXXX-X to be your site's ID.
     script.
       var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
