--- a/node/chat/app/public/styles/index.css
+++ b/node/chat/app/public/styles/index.css
@@ -57,3 +57,10 @@ footer {
 .dialog-btn {
     display: none;
 }
+
+.top-welcom-con p {
+  padding: 15px;
+  text-align: center;
+  border-radius: 5px;
+  display: none;
+}
