--- a/node/chat/app/public/views/html/index.html
+++ b/node/chat/app/public/views/html/index.html
@@ -62,35 +62,27 @@
         <div class="container main-container">
 
           <div class="row row-offcanvas row-offcanvas-right">
+            <div class="top-welcom-con">
+              <p class="bg-info">欢迎您，<span class="welcom-user"></span></p>
+            </div>
+
 
             <div class="col-xs-12 col-sm-9 chat-con">
                 <p class="pull-right visible-xs">
                     <button type="button" class="btn btn-primary btn-xs" data-toggle="offcanvas">Toggle nav</button>
                 </p>
                 <div class="jumbotron chat-detail">
-                    <div class="chat-item">
-                        <h4 class="chat-user">【崔世菊】2015/6/8 17:08</h4>
-                        <p class="chat-info">This is an example to show the potential of an offcanvas layout pattern in Bootstrap. Try some responsive-range viewport sizes to see it in action.</p>
-                    </div>
-
-                    <div class="chat-item">
-                        <h4 class="chat-user chat-self">【孙东芝】2015/6/8 17:08</h4>
-                        <p class="chat-info">This is an example to show the potential of an offcanvas layout pattern in Bootstrap. Try some responsive-range viewport sizes to see it in action.</p>
-                    </div>
-
-
-
 
                 </div>
 
-                <form class="form-horizontal">
+                <div class="form-horizontal">
                   <div class="form-group form-group-lg">
                     <div class="col-sm-10">
                       <input class="form-control" type="text" id="formGroupInputLarge" placeholder="消息">
                     </div>
-                    <button type="submit" class="btn btn-info btn-lg btn-padding-45">发送</button>
+                    <button type="" class="btn btn-info btn-lg btn-padding-45" id="send-msg">发送</button>
                   </div>
-                </form>
+                </div>
             </div><!--/.col-xs-12.col-sm-9-->
 
             <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar">
@@ -140,6 +132,8 @@
         <!--对话框-->
 
         <script src="/static/vender/jquery/jquery-2.1.4.min.js"></script>
+        <script src="/static/scripts/core/underscore-min.js"></script>
+        <script src="/static/scripts/core/juicer-min.js"></script>
         <script src="/static/scripts/core/bootstrap.min.js"></script>
         <script src="/socket.io/socket.io.js"></script>
         <script src="/static/scripts/index.js"></script>
