chat sys update

--- a/node/chat/app/public/views/html/index.html
+++ b/node/chat/app/public/views/html/index.html
@@ -52,6 +52,7 @@
                       <li><a href="#">One more separated link</a></li>
                     </ul>
                   </li>
+                  <li><a href="#">用户名：<span class="userName">未登录</span></a></li>
                 </ul>
               </div><!--/.nav-collapse -->
             </div>
@@ -63,7 +64,7 @@
 
           <div class="row row-offcanvas row-offcanvas-right">
             <div class="top-welcom-con">
-              <p class="bg-info">欢迎您，<span class="welcom-user"></span></p>
+              <p class="bg-primary"><span class="welcom-user"></span> </p>
             </div>
 
 
@@ -99,7 +100,7 @@
           <hr>
 
           <footer>
-            <p>© Toshiba 2015</p>
+            <p>©CopyRight Toshiba 2015</p>
           </footer>
 
         </div>
@@ -130,6 +131,12 @@
         </div>
 
         <!--对话框-->
+
+        <!--error tip-->
+        <div class="err-tips-con">
+          <p class="bg-danger"><span class="err-tips">错误提示</span></p>
+        </div>
+
 
         <script src="/static/vender/jquery/jquery-2.1.4.min.js"></script>
         <script src="/static/scripts/core/underscore-min.js"></script>
