--- a/node/chat/app/public/styles/index.css
+++ b/node/chat/app/public/styles/index.css
@@ -59,8 +59,25 @@ footer {
 }
 
 .top-welcom-con p {
+  position: absolute;
   padding: 15px;
   text-align: center;
   border-radius: 5px;
+  top: 0;
+  width: 1200px;
+  display: none;
+}
+
+.err-tips-con {
+  width: 1200px;
+  margin: 0 auto;
+}
+.bg-danger {
+  position: absolute;
+  padding: 15px;
+  text-align: center;
+  border-radius: 5px;
+  top: 0;
+  width: 1200px;
   display: none;
 }
