--- a/node/chat/app/public/views/html/index.html
+++ b/node/chat/app/public/views/html/index.html
@@ -87,12 +87,8 @@
             </div><!--/.col-xs-12.col-sm-9-->
 
             <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar">
+              <a href="#" class="list-group-item active">在线人数：<span class="online-num">0</span></a>
               <div class="list-group">
-                <a href="#" class="list-group-item active">主页</a>
-                <a href="#" class="list-group-item">function1</a>
-                <a href="#" class="list-group-item">function2</a>
-                <a href="#" class="list-group-item">function3</a>
-                <a href="#" class="list-group-item">function4</a>
               </div>
             </div><!--/.sidebar-offcanvas-->
           </div><!--/row-->
