--- a/node/chat/app/public/views/html/index.html
+++ b/node/chat/app/public/views/html/index.html
@@ -82,6 +82,7 @@
                       <input class="form-control" type="text" id="formGroupInputLarge" placeholder="消息">
                     </div>
                     <button type="" class="btn btn-info btn-lg btn-padding-45" id="send-msg">发送</button>
+                    <input type="file" id="sendImage"/>
                   </div>
                 </div>
             </div><!--/.col-xs-12.col-sm-9-->
