--- a/node/socialNet/views/resetPassword.jade
+++ b/node/socialNet/views/resetPassword.jade
@@ -1,6 +1,12 @@
 extends ./layout
 block body
-    hello thi sis a layout
+    form(action='/resetPassword', method='POST')
+        input(type='hidden',name='accountId', value='#{locals.accountId}')
+        p
+            label(for='password') New Password:
+            input#password(type='password', name='password')
+        p
+            input(type='submit')
 
 block footer
     this is footer
