--- a/node/gulp-md5-multi-page/app/public/views/html/index.html
+++ b/node/gulp-md5-multi-page/app/public/views/html/index.html
@@ -29,15 +29,7 @@
 
         </div>
 
-
-        <script src="/vendor/require.js"></script>
-        <script>
-
-            require(['/scripts/config.js'], function() {
-                require(['/scripts/index.js']);
-            });
-        </script>
-
+        <script data-main="/static/scripts/index.js" src="/static/vendor/require.js"></script>
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
             var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
