udpage grunt build

--- a/node/seajs-grunt-build/app/public/views/index.html
+++ b/node/seajs-grunt-build/app/public/views/index.html
@@ -35,10 +35,8 @@
                 "jquery": "/vendor/jquery.js"
               }
             });
-            seajs.use(['/scripts/index'], function(index) {
-                console.log('jinru html~~~');
-                console.log(index);
-                index.init();
+            seajs.use(['/scripts/index'], function() {
+
             });
         </script>
 
