--- a/node/seajs-grunt-build/app/public/views/index.html
+++ b/node/seajs-grunt-build/app/public/views/index.html
@@ -27,17 +27,16 @@
         </div>
 
         <script src="/vendor/sea.js"></script>
+        <script src="/scripts/index.js"></script>
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
             seajs.config({
-              base: "/",
+              base: "./",
               alias: {
                 "jquery": "/vendor/jquery.js"
               }
             });
-            seajs.use(['/scripts/index'], function() {
-
-            });
+            seajs.use("/scripts/index.js");
         </script>
 
     </body>
