--- a/node/socialNet/views/layout.jade
+++ b/node/socialNet/views/layout.jade
@@ -14,6 +14,7 @@ html(lang='en')
     script(type='text/javascript', src='/scripts/libs/underscore.js')
     script(type='text/javascript', src='/scripts/libs/backbone.js')
     script(type='text/javascript', src='/scripts/libs/juicer-min.js')
+    script(type='text/javascript', src='/socket.io/socket.io.js')
 
     script(data-main='/scripts/boot', type='text/javascript', src='/scripts/libs/require.js')
     block footer
