--- a/node/gulp-md5-multi-page/app/public/views/html/index.html
+++ b/node/gulp-md5-multi-page/app/public/views/html/index.html
@@ -30,11 +30,11 @@
         </div>
 
 
-        <script src="/vendor/require.js"></script>
+        <script src="/static/vendor/require.js"></script>
         <script>
 
-            require(['/scripts/config.js'], function() {
-                require(['/scripts/index.js']);
+            require(['/static/scripts/config.js'], function() {
+                require(['/static/scripts/index.js']);
             });
         </script>
 
