--- a/HTML5/views/zingChart.ejs
+++ b/HTML5/views/zingChart.ejs
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>使用ZingChart生成报表<%=settings.name%><%=age%></title>
+        <title>使用ZingChart生成报表</title>
         <link rel="stylesheet" type="text/css" href="/styles/common.css"/>
     </head>
     <body>
