--- a/node/express-standard/views/photos.ejs
+++ b/node/express-standard/views/photos.ejs
@@ -15,7 +15,7 @@
             <% photos.forEach(function(photo) {%>
                 <div class="photo">
                     <h2><%= photo.name %></h2>
-                    <img src="<%= photo.path %>"/>
+                    <a href="/photos/<%= photo._id %>/download"><img src="<%= photo.path %>"/></a>
                 </div>
             <% })  %>
         </div>
