--- a/node/express-standard/views/register.ejs
+++ b/node/express-standard/views/register.ejs
@@ -9,12 +9,12 @@
         <p>Fill in the form below to sign up!</p>
 
         <% include messages %>
-        <form action="/register" method='post'>
+        <form action="/passport/register" method='post'>
             <p>
-                <input type="text" name='user[name]' placeholder='Username'/>
+                <input type="text" name='name' placeholder='Username'/>
             </p>
             <p>
-                <input type="password" name='user[pass]' placeholder='Password'/>
+                <input type="password" name='pass' placeholder='Password'/>
             </p>
             <p>
                 <input type='submit' value='Sign Up'/>
