--- a/node/express-standard/views/index.ejs
+++ b/node/express-standard/views/index.ejs
@@ -7,5 +7,13 @@
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
+    <a target="_blank" href="/bug">bug</a>
+    <a target="_blank" href="/bug1">bug1</a>
+    <a target="_blank" href="/passport/login">login</a>
+    <a target="_blank" href="/passport/register">register</a>
+    <a target="_blank" href="/users">users</a>
+    <a target="_blank" href="/photos/">photos list</a>
+    <a target="_blank" href="/photos/upload">photos upload</a>
+
   </body>
 </html>
