--- a/node/express-standard/views/index.ejs
+++ b/node/express-standard/views/index.ejs
@@ -14,6 +14,8 @@
     <a target="_blank" href="/users">users</a>
     <a target="_blank" href="/photos/">photos list</a>
     <a target="_blank" href="/photos/upload">photos upload</a>
+    <a target="_blank" href="/entry/post">entry add</a>
+    <a target="_blank" href="/entry/list">entry list</a>
 
   </body>
 </html>
