--- a/node/express-standard/views/pager.ejs
+++ b/node/express-standard/views/pager.ejs
@@ -1,6 +1,6 @@
 <div id='pager'>
     <% if(page.count > 1) { %>
-        <% if(page.number) {%>
+        <% if(page.number > 1) {%>
             <a id="prev" href="/entry/list?page=<%= page.number - 1 %>">Prev<a>
         <% } %>
         <% if(page.number < page.count ) { %>
