--- a/node/require-gulp-build/app/public/views/html/index.html
+++ b/node/require-gulp-build/app/public/views/html/index.html
@@ -11,11 +11,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-        <link rel="stylesheet" href="/static/styles/core/bootstrap-theme.min.css">
-        <link rel="stylesheet" href="/static/styles/core/bootstrap.min.css">
-        <link rel="stylesheet" href="/static/styles/core/main.css">
-        <link rel="stylesheet" href="/static/styles/index.css">
-        <script src="/static/scripts/libs/modernizr-2.6.2.min.js"></script>
+        <link rel="stylesheet" href="/styles/bootstrap.css">
+        <link rel="stylesheet" href="/styles/index.css">
+        <script src="/scripts/libs/modernizr-2.6.2.min.js"></script>
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -29,7 +27,7 @@
 
         </div>
 
-        <script data-main="/scripts/boot.js" src="/vendor/require.js"></script>
+        <script data-main="/scripts/boot.js" src="/vendor/base.js"></script>
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
             var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
