--- a/node/require-gulp-build/app/public/views/html/index.html
+++ b/node/require-gulp-build/app/public/views/html/index.html
@@ -4,15 +4,15 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
     <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <meta charset="utf-8"/>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
         <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content=""/>
+        <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-        <link rel="stylesheet" href="/styles/bootstrap.css">
-        <link rel="stylesheet" href="/styles/index.css">
+        <link rel="stylesheet" href="/styles/bootstrap.css"/>
+        <link rel="stylesheet" href="/styles/index.css"/>
         <script src="/scripts/libs/modernizr-2.6.2.min.js"></script>
     </head>
     <body>
@@ -26,6 +26,7 @@
 
 
         </div>
+        <script src="/vendor/base.js"></script>
 
         <script data-main="/scripts/boot.js" src="/vendor/base.js"></script>
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
