--- a/node/require-gulp-build/app/dest/views/html/index.html
+++ b/node/require-gulp-build/app/dest/views/html/index.html
@@ -1,6 +1,27 @@
-<!DOCTYPE html><!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]--><!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]--><!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]--><!--[if gt IE 8]><!--><html class="no-js"><!--<![endif]--><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><title></title><meta name="description" content=""><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="stylesheet" href="/styles/bootstrap.css"><link rel="stylesheet" href="/styles/index.css"><script src="/scripts/libs/modernizr-2.6.2.min.js"></script></head><body><!--[if lt IE 7]>
-            <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
-        <![endif]--><script src="/vendor/base.js"></script><script data-main="/scripts/boot.js" src="/vendor/base.js"></script><script>var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
-            (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-            g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
-            s.parentNode.insertBefore(g,s)}(document,'script'));</script></body></html>
+<!DOCTYPE html>
+ <html>
+    <head>
+        <meta charset="utf-8"/>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+        <title></title>
+        <meta name="description" content=""/>
+        <meta name="viewport" content="width=device-width, initial-scale=1"/>
+
+        <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+        <link rel="stylesheet" href="/styles/index-0ade637d07.css"/>
+        <!--<link rel="stylesheet" href="/styles/index-0ade637d07.css"/>-->
+        <script src="/scripts/libs/modernizr-2.6.2.min.js"></script>
+    </head>
+    <body>
+
+
+
+        <div>
+            <img src='/images/22-62ae9d6352.jpg'/>
+            <img src='/images/bg-8dc0c4f40d.png'/>
+        </div>
+
+        <script data-main="/scripts/boot-874d35c5df.js" src="/vendor/base-d91df8d10a.js"></script>
+
+    </body>
+</html>
