--- a/node/express-standard/views/index.ejs
+++ b/node/express-standard/views/index.ejs
@@ -57,7 +57,7 @@
     <!-- The justified navigation menu is meant for single line per list item.
          Multiple lines will require custom code not provided by Bootstrap. -->
     <div class="masthead">
-        <h3 class="text-muted">Project name</h3>
+        <h3 class="text-muted">Project name sdd</h3>
         <nav>
             <ul class="nav nav-justified">
                 <li class="active"><a href="#">Home</a></li>
