--- a/js/backbone/bookLibrary/public/views/index.ejs
+++ b/js/backbone/bookLibrary/public/views/index.ejs
@@ -5,7 +5,7 @@
 </head>
 <body class="learn-bar">
 <div id="books">
-    <form id="addBook" action="/add" method="post">
+    <form id="addBook">
         <div>
             <label for="coverImage">CoverImage : </label>
             <input id="coverImage" name="coverImage" type="text" value="/img/a.jpg" />
@@ -22,23 +22,12 @@
             <label for="keywords">Keywords : </label>
             <input id="keywords" type="text"  name="keywords" />
 
-            <button type="submit" id="add">Add</button>
+            <button id="add">Add</button>
         </div>
     </form>
 
 
-    <% for(var i=0; i<books.length; i++) {%>
-        <div class="bookContainer">
-                <img src="/img/a.jpg"/>
-                <ul>
-                    <li>Title :  <%= books[i].title %></li>
-                    <li>Author : <%= books[i].author %></li>
-                    <li>releaseDate : <%= books[i].releaseDate %></li>
-                    <li>Keywords : <%= books[i].keyswords %></li>
-                </ul>
-                <button class="delete">Delete</button>
-        </div>
-    <% } %>
+
 
 </div>
 
@@ -48,21 +37,43 @@
 
 
 
+<script id="bookItemTemplate" type="text/x-handlebars-template">
+    <form id="addBook">
+        <div>
+            <label for="coverImage">CoverImage : </label>
+            <input id="coverImage" name="coverImage" type="text" value="/img/a.jpg" />
 
+            <label for="title">Title : </label>
+            <input id="title" type="text"  name="title" value="{{title}}"/>
 
-<script id="bookTemplate" type="text/template">
-    <div class="bookContainer">
-        <img src="coverImage" />
+            <label for="author">Author : </label>
+            <input id="author" type="text"  name="author" value="{{author}}" />
+
+            <label for="releaseDate">ReleaseDate : </label>
+            <input id="releaseDate" type="text"  name="releaseDate" value="{{releaseDate}}" />
+
+            <label for="keywords">Keywords : </label>
+            <input id="keywords" type="text"  name="keywords"  value="{{keywords}}"/>
+
+            <button id="update">update</button>
+        </div>
+    </form>
+</script>
+
+<script id="bookTemplate" type="text/x-handlebars-template">
+    <div class="bookInnerCon" id="{{_id}}">
+        <img src="/img/a.jpg"/>
         <ul>
-            <li>title</li>
-            <li>author</li>
-            <li>releaseDate</li>
-            <li>keywords</li>
+            <li>Title :  {{ title }}</li>
+            <li>Author : {{ author }}</li>
+            <li>releaseDate : <br/> {{ releaseDate }}</li>
+            <li>Keywords : {{ keywords }}</li>
         </ul>
         <button class="delete">Delete</button>
     </div>
 </script>
 
+<script src="/js/lib/handlebars-v4.0.5.js"></script>
 <script src="/js/lib/jquery-1.8.3.min.js"></script>
 <script src="/js/lib/underscore.js"></script>
 <script src="/js/lib/backbone-min.js"></script>
@@ -71,6 +82,10 @@
 <script src="/js/collections/library.js"></script>
 <script src="/js/views/book.js"></script>
 <script src="/js/views/library.js"></script>
+<script src="/js/views/bookItem.js"></script>
+
+<script src="/js/router/router.js"></script>
+
 <script src="/js/app.js"></script>
 
 
