--- a/js/backbone/bookLibrary/public/css/screen.css
+++ b/js/backbone/bookLibrary/public/css/screen.css
@@ -1,6 +1,7 @@
 body {
     background-color:#eee;
     font-family: 'Avenir Next', Avenir, 'Helvetica Neue', Helvetica, 'Lantinghei SC', 'Hiragino Sans GB', 'Microsoft YaHei', 微软雅黑, STHeiti, 'WenQuanYi Micro Hei', SimSun, sans-serif;
+    /*ont-family: "Lantinghei SC", "Open Sans", Arial, "Hiragino Sans GB", "Microsoft YaHei", 微软雅黑, STHeiti, "WenQuanYi Micro Hei", SimSun, sans-serif;*/
     font-feature-settings: 'kern' 1;
     text-rendering: geometricPrecision;
     -webkit-font-smoothing: antialiased;
@@ -35,6 +36,7 @@ body {
     margin-right: 10px;
     text-align: right;
     line-height: 25px;
+    color: #fff;
 }
 
 #addBook label, #addBook input {
@@ -66,4 +68,49 @@ body {
     clear: both;
     font-size: 0;
     line-height: 0;
+}
+
+/*视觉差滚动*/
+.background-container {
+    with: 100%;
+    height: 100%;
+    position: fixed;
+    left: 0;
+    top: 0;
+    overflow: hidden;
+    z-index: -1;
+}
+
+.background-container .bg-dy1{
+    width:100%;
+    height:387px;
+    position:fixed;
+    bottom:0;
+    left:0;
+    z-index:16;
+    _display:none;
+    background:url("/img/prospect.png") center bottom repeat repeat;
+    -webkit-transition:all 0.3s linear;
+    -moz-transition:all 0.3s linear;
+    -o-transition:all 0.3s linear;
+    -ms-transition:all 0.3s linear;
+    transition:all 0.3s linear
+}
+
+.background-container .bg-dy2{
+    width:100%;
+    height:100%;
+    background:url("/img/starry.jpg") 0 0 repeat repeat;
+    z-index:10;
+    _display:none;
+    position:fixed;
+    -webkit-transition:all .5s ease-in;
+    -moz-transition:all .5s ease-in;
+    -o-transition:all .5s ease-in;
+    -ms-transition:all .5s ease-in;
+    -webkit-transition:all 0.5s linear;
+    -moz-transition:all 0.5s linear;
+    -o-transition:all 0.5s linear;
+    -ms-transition:all 0.5s linear;
+    transition:all 0.5s linear
 }
