update for project

--- a/js/backbone/bookLibrary/public/views/index.ejs
+++ b/js/backbone/bookLibrary/public/views/index.ejs
@@ -78,6 +78,8 @@
             <li>Keywords : {{ keywords }}</li>
         </ul>
         <button class="delete">Delete</button>
+        <button class="update">update</button>
+
     </div>
 </script>
 
